--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ a:hover
    text-align: left;
 }
 </style>
+   
+   <meta name="adbit-site-verification" content="86d847d993269443e10f63c18a8c32d3143cd936b807faaed454bdcb0ef335c7" />
+
+   
 </head>
 <body <!--="" Start="" of="" StatCounter="" --="">
    <script type="text/javascript">   
