--- a/index.html
+++ b/index.html
@@ -99,5 +99,9 @@ alt="website statistics"></a></div></noscript>
          <span style="color:#000000;font-family:Arial;font-size:19px;">Start earning from this hand picked selection of the best paying<br>Bitcoin faucets by clicking the green </span><span style="color:#2E8B57;font-family:Arial;font-size:19px;">&quot;Next Faucet&quot; </span><span style="color:#000000;font-family:Arial;font-size:19px;">button at&nbsp; the top right.<br><br>If you don't have a bitcoin wallet yet go here to get one free and fast.<br></span><span style="color:#31708F;font-family:Arial;font-size:19px;"><br>- Bookmark this page (Control</span><span style="color:#000000;font-family:Arial;font-size:16px;">&#0043;</span><span style="color:#31708F;font-family:Arial;font-size:19px;">D) to earn massive satoshis everyday!<br><br>- Some faucets don't work well on rotators. To see the full list of top faucets go here.<br><br></span><span style="color:#000000;font-family:Arial;font-size:19px;">- Sugestions to add/remove faucets are always accepted. Just send us an email.</span><span style="color:#31708F;font-family:Arial;font-size:19px;"><br></span>
       </div>
    </div>
+   
+   <script type="text/javascript" src="https://adbit.biz/js/show_ads.js"></script>
+
+   
 </body>
 </html>
