--- a/index.html
+++ b/index.html
@@ -73,23 +73,10 @@ a:hover
 
    
 </head>
-<body <!--="" Start="" of="" StatCounter="" --="">
-   <script type="text/javascript">   
-   var sc_project=10502693; 
-   var sc_invisible=1; 
-   var sc_security="300f5dca"; 
-   var scJsHost = (("https:" == document.location.protocol) ?
-   "https://secure." : "http://www.");
-   document.write("<sc"+"ript type='text/javascript' src='" +
-   scJsHost+
-   "statcounter.com/counter/counter.js'></"+"script>");
-   </script>
-   <noscript><div class="statcounter"><a title="website
-statistics" href="http://statcounter.com/free-web-stats/" 
-target="_blank"><img class="statcounter" 
-src="http://c.statcounter.com/10502693/0/300f5dca/1/" 
-alt="website statistics"></a></div></noscript>
-<!-- End of StatCounter -->>
+<body>
+
+   <div class="adbit-display-ad" data-adspace-id="717C34C7D6"></div>
+
    <div id="container">
       <div id="wb_Text1" style="position:absolute;left:56px;top:32px;width:682px;height:126px;z-index:0;text-align:left;">
          <div style="line-height:63px;"><span style="color:#FF8C00;font-family:Tahoma;font-size:37px;"><strong>HAND PICKED, BEST PAYING</strong></span></div>
