--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@ a:hover
          <div style="line-height:63px;"><span style="color:#FF8C00;font-family:Tahoma;font-size:37px;"><strong>HAND PICKED, BEST PAYING</strong></span></div>
          <div style="line-height:45px;"><span style="color:#FF8C00;font-family:Tahoma;font-size:37px;"><strong>FAUCETS ROTATOR 2017</strong></span></div>
       </div>
+      
+      <div class="adbit-display-ad" data-adspace-id="17DACB3DA2"></div>
+
+      
       <div id="wb_Text5" style="position:absolute;left:56px;top:379px;width:793px;height:236px;z-index:1;text-align:left;">
          <span style="color:#000000;font-family:Arial;font-size:19px;">Start earning from this hand picked selection of the best paying<br>Bitcoin faucets by clicking the green </span><span style="color:#2E8B57;font-family:Arial;font-size:19px;">&quot;Next Faucet&quot; </span><span style="color:#000000;font-family:Arial;font-size:19px;">button at&nbsp; the top right.<br><br>If you don't have a bitcoin wallet yet go here to get one free and fast.<br></span><span style="color:#31708F;font-family:Arial;font-size:19px;"><br>- Bookmark this page (Control</span><span style="color:#000000;font-family:Arial;font-size:16px;">&#0043;</span><span style="color:#31708F;font-family:Arial;font-size:19px;">D) to earn massive satoshis everyday!<br><br>- Some faucets don't work well on rotators. To see the full list of top faucets go here.<br><br></span><span style="color:#000000;font-family:Arial;font-size:19px;">- Sugestions to add/remove faucets are always accepted. Just send us an email.</span><span style="color:#31708F;font-family:Arial;font-size:19px;"><br></span>
       </div>
