--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ a:hover
       </div>
       
       <div class="adbit-display-ad" data-adspace-id="17DACB3DA2"></div>
+<div class="adbit-display-ad" data-adspace-id="938A82977A"></div>
 
       
       <div id="wb_Text5" style="position:absolute;left:56px;top:379px;width:793px;height:236px;z-index:1;text-align:left;">
