--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ a:hover
    </div>
    
    <script type="text/javascript" src="https://adbit.biz/js/show_ads.js"></script>
+<div class="adbit-display-ad" data-adspace-id="B93B469F57"></div>
 
    
 </body>
