--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@ a:hover
 <div class="adbit-display-ad" data-adspace-id="7EFFFE3190"></div>
    
    
+              <br />           <br />
+   
+   <iframe data-aa='635616' src='//ad.a-ads.com/635616?size=728x90' scrolling='no' style='width:728px; height:90px; border:0px; padding:0;overflow:hidden' allowtransparency='true'></iframe>
+   
+   
    <script type="text/javascript" src="https://adbit.biz/js/show_ads.js"></script>
 
  <!-- Histats.com  START  (aync)-->
